deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mce-metrics-exporter
  namespace: openshift-mce-monitoring
  labels:
    app: mce-metrics-exporter
    app.kubernetes.io/name: mce-metrics-exporter
    app.kubernetes.io/component: metrics
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: mce-metrics-exporter
